XMLExper/m17/m17_10_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLAttribute::SetAttribute(unsigned int)’:
tinyxml2.cpp:1566:38: error: call of overloaded ‘ToStr(unsigned int&, char [200], tinyxml2::XMLAttribute::<unnamed enum>)’ is ambiguous
 1566 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLElement::SetText(unsigned int)’:
tinyxml2.cpp:1739:38: error: call of overloaded ‘ToStr(unsigned int&, char [200], tinyxml2::XMLElement::<unnamed enum>)’ is ambiguous
 1739 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushAttribute(const char*, unsigned int)’:
tinyxml2.cpp:2792:38: error: call of overloaded ‘ToStr(unsigned int&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2792 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushText(unsigned int)’:
tinyxml2.cpp:2910:42: error: call of overloaded ‘ToStr(unsigned int&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2910 |     XMLUtil::ToStr( value, buf, BUF_SIZE );
      |                                          ^
tinyxml2.cpp:571:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int, char*, int)’
  571 | void XMLUtil::ToStr( int v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
diff: tinyxml2.o: No such file or directory
